fixed files